[package]
name = "durthang"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A modern, terminal-based MUD client with TLS, GMCP, automap, aliases, triggers, and a sidebar panel system"
license = "GPL-3.0-only"
repository = "https://github.com/Pommersche92/durthang"
homepage = "https://github.com/Pommersche92/durthang"
readme = "README.md"
keywords = ["mud", "telnet", "tui", "gmcp", "client"]
categories = ["command-line-utilities", "network-programming", "games"]

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
keyring = "3"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
